<resources>
    <string name="app_name">ECE420 Tablet FM</string>
    <string name="init_status">Status:</string>
    <string name="action_settings">Settings</string>
    <string name="StartEcho">Start</string>
    <string name="StopEcho">Stop</string>
    <string name="GetParam">View Audio Param</string>
    <string name="status_echoing">"Running FM Synthesis..."</string>
    <string name="status_record_perm">"Requesting RECORD_AUDIO Permission..."</string>
    <string name="ModIdxMaxPrompt">"Maximum Modulation Index: "</string>
    <string name="ModIdxMinPrompt">"Minimum Modulation Index: "</string>
    <string name="ModFreqFactorPrompt">"Modulation Frequency Factor: "</string>
    <string name="AmpWavePrompt">"Carrier Wave Type:"</string>
    <string name="ModWavePrompt">"Modulation Wave Type:</string>

    <string name="error_player">Failed to Create Audio Player</string>
    <string name="error_recorder">Failed to Create Audio Recorder</string>
    <string name="error_no_mic">"Error: Audio recording is not supported"</string>
    <string name="error_no_permission">"Error: Permission for RECORD_AUDIO was denied"</string>
    <string name="error_invalid_input">"Error: Invalid Input Parameters"</string>

    <string name="prompt_permission">"This sample needs RECORD_AUDIO permission"</string>

    <string-array name="wave_types">
        <item>Sine</item>
        <item>Square</item>
        <item>Saw</item>
        <item>Triangle</item>
    </string-array>
</resources>
